--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_insta: ^1.0.0
+  firebase_core: ^1.6.0
+  cloud_firestore: ^2.5.2
+  firebase_auth: ^3.1.1
 
 dev_dependencies:
   flutter_test:
